--- a/WiX/SoftHSM2/Product.wxs
+++ b/WiX/SoftHSM2/Product.wxs
@@ -84,6 +84,9 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
               <Component Id="Softhsm2LicenseTxtFile" Guid="5D11851F-4553-4410-B441-D0285BAA9179">
                 <File Id="LICENSE.txt.2" Source="c:\SoftHSM2\share\doc\softhsm2\LICENSE.txt" />
               </Component>
+              <Component Id="Softhsm2ChangelogTxtFile" Guid="93E70FEB-169C-45E6-919A-AF8FCEA641BB">
+                <File Source="c:\SoftHSM2\share\doc\softhsm2\CHANGELOG.txt" />
+              </Component>
             </Directory>
           </Directory>
           <Directory Id="ShareManFolder" Name="man">
@@ -128,6 +131,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <ComponentRef Id="Softhsm2X64DllFile" />
       <ComponentRef Id="OpensslLicenseTxtFile" />
       <ComponentRef Id="Softhsm2LicenseTxtFile" />
+	  <ComponentRef Id="Softhsm2ChangelogTxtFile" />
       <ComponentRef Id="Softhsm2DumpFileTxtFile" />
       <ComponentRef Id="Softhsm2KeyconvTxtFile" />
       <ComponentRef Id="Softhsm2UtilTxtFile" />
